# kg_labs

./: README.md  lightShader.frag  shader.frag  shader.vert
kp/: CMakeLists.txt  curves_math.hpp  main.cpp  math_help.hpp
kp/shaders/: shader.frag  shader.vert
lab1/: main.py
lab2/: CMakeLists.txt  README.md  REPORT.md  camera.h  compile_shaders.sh  keyLogger.h  main.cpp
lab2v2/: CMakeLists.txt  conversion.inl  figure.hpp  figure.inl  main.cpp  matrices.h  matrices.hpp  matrices.inl
lab3/: Makefile  conversion.hpp  figure.hpp  figure.inl  main.cpp  math_help.hpp  matrices.hpp  matrices.inl
lab45/: CMakeLists.txt  main.cpp
lab45/shaders/: lightShader.vert  shader.frag  shader.vert
lab6/: main.cpp
lab6/shaders/: shader.frag  shader.vert
lab7/: Makefile  automate.h  curves_math.h  main.cpp  math_help.h  myprint.h  sfml_extra.h  sfml_help.h
